--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# General
+.DS_Store
+.Trashes
+.Spotlight-V100
+Thumbs.db
+$RECYCLE.BIN/
+
+# VsCode
+.vscode
+
+# Idea
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
