--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,14 @@ openai = "^0.26.5"
 python-telegram-bot = "^20.1"
 
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+bot = "bot.app:main"
