--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.10"
 python-dotenv = "^0.21.1"
 python-telegram-bot = "^20.1"
 openai = "^0.27.0"
+Django = "^4.1.7"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
