--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-telegram-bot = "^20.1"
 openai = "^0.27.0"
 Django = "^4.1.7"
 gunicorn = "^20.1.0"
+django-bootstrap4 = "^22.3"
 
 
 [tool.poetry.group.dev.dependencies]
