--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ openai = "^0.27.0"
 Django = "^4.1.7"
 gunicorn = "^20.1.0"
 django-bootstrap4 = "^22.3"
+tiktoken = "^0.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
