--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ tiktoken = "^0.3.3"
 flake8 = "^6.0.0"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
+asynctest = "^0.13.0"
 
 [build-system]
 requires = ["poetry-core"]
