--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ Django = "^4.1.7"
 gunicorn = "^20.1.0"
 django-bootstrap4 = "^23.1"
 tiktoken = "^0.3.3"
+colorlog = "^6.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
