--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ gunicorn = "^20.1.0"
 django-bootstrap4 = "^23.1"
 tiktoken = "^0.3.3"
 colorlog = "^6.7.0"
+marvin = "^0.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
